Add next steps to Next.js quickstart

--- a/src/pages/quickstarts/next.mdx
+++ b/src/pages/quickstarts/next.mdx
@@ -4,7 +4,7 @@ import {YouTube} from "@/components/Youtube"
 
 # Use Clerk with Next.js
 
-Learn how to create use Clerk with Next.js including protecting pages and the auth state.
+Learn how to use Clerk with Next.js including protecting pages.
 
 <Callout type="info" emoji="ℹ️">
 Are you looking to use Next.js App Layout Beta? Check out our Next.js App Beta guide.
@@ -270,3 +270,11 @@ export default MyApp;
 </Tab>
 
 </Tabs>
+
+## Next Steps
+
+Now you have an application integrated with Clerk you will want to read the following documentation:
+
+- Server-side APIs
+- Client side helpers
+- Alternative Backends
