--- a/src/pages/quickstarts/next.mdx
+++ b/src/pages/quickstarts/next.mdx
@@ -37,8 +37,8 @@ pnpm i @clerk/nextjs
 Below is an example of your .env.local file. To get the respective keys go to the API Keys page in the Clerk dashboard.
 
 ```sh copy filename=".env.local"
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_xxxxxxxxxxx
-CLERK_SECRET_KEY=test_xxxxxxxxxxxxxxxxxx
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_••••••••••••••••••••••••••••••••••
+CLERK_SECRET_KEY=sk_test_••••••••••••••••••••••••••••••••••
 ```
 
 ## Configure `<ClerkProvider>`
