Fix multi session

--- a/src/pages/components/control-components/multi-session.mdx
+++ b/src/pages/components/control-components/multi-session.mdx
@@ -40,7 +40,7 @@ function Page() {
       cells: ["afterSignUpUrl", "string", "✅", "Full URL or path to navigate after successful sign up."]
     },
     {
-      cells: ["redirectUrl", "string", "✅", "Full URL or path to navigate after successful sign in or sign up. \n The same as setting afterSignInUrl and afterSignUpUrl to the same value."]
+      cells: ["redirectUrl", "string", "✅", "Full URL or path to navigate after successful sign in or sign up.The same as setting afterSignInUrl and afterSignUpUrl to the same value."]
     },
     {
       cells: ["secondFactorUrl", "string", "✅  ", "Full URL or path to navigate during sign in, if 2FA is enabled."]
