Add hide button Add Authenticate call back Fix Clerk Loading Clerk Loaded

--- a/src/pages/components/control-components/multi-session.mdx
+++ b/src/pages/components/control-components/multi-session.mdx
@@ -4,6 +4,8 @@ import { Tables } from '@/components/Table'
 ---
 The `<MultisessionAppSupport>` provides a wrapper for your React application that guarantees a full rerendering cycle everytime the current session and user changes. The `<MultisessionAppSupport>` should live under the `<ClerkProvider/>` and wrap your React application.
 
+## Usage
+
 ```jsx copy filename='app.js'
 import { useEffect } from "react";
 import { ClerkProvider, MultisessionAppSupport } from "@clerk/clerk-react";
@@ -31,18 +33,3 @@ function Page() {
   );
 }
 ```
-
-<Tables headings={["Name", "Type","Optional", "Description"]} rows={[
-    {
-      cells: ["afterSignInUrl", "string", "✅", "Full URL or path to navigate after successful sign in."]
-    },
-    {
-      cells: ["afterSignUpUrl", "string", "✅", "Full URL or path to navigate after successful sign up."]
-    },
-    {
-      cells: ["redirectUrl", "string", "✅", "Full URL or path to navigate after successful sign in or sign up.The same as setting afterSignInUrl and afterSignUpUrl to the same value."]
-    },
-    {
-      cells: ["secondFactorUrl", "string", "✅  ", "Full URL or path to navigate during sign in, if 2FA is enabled."]
-    },
-  ]} />
