Remove logos Update: auth with callback clerk loaded cler loading multisess sign in sign up sign in button

--- a/src/pages/components/control-components/authenticate-with-callback.mdx
+++ b/src/pages/components/control-components/authenticate-with-callback.mdx
@@ -7,7 +7,7 @@ The `<AuthenticateWithRedirectCallback/>` is used to complete a custom OAuth flo
 
 ## Usage
 
-```jsx copy filename='app.js'
+```jsx copy filename="app.js"
 import React from "react";
 import {
   ClerkProvider,
@@ -61,7 +61,7 @@ function SignInOAuthButtons() {
       cells: ["afterSignUpUrl", "string", "✅", "Full URL or path to navigate after successful sign up."]
     },
     {
-      cells: ["redirectUrl", "string", "✅", "Full URL or path to navigate after successful sign in or sign up.The same as setting afterSignInUrl and afterSignUpUrl to the same value."]
+      cells: ["redirectUrl", "string", "✅", "Full URL or path to navigate after successful sign in or sign up. \n\n This is the same as setting `afterSignInUrl` and `afterSignUpUrl` to the same value."]
     },
     {
       cells: ["secondFactorUrl", "string", "✅  ", "Full URL or path to navigate during sign in, if 2FA is enabled."]
