--- a/src/pages/components/control-components/clerk-loading.mdx
+++ b/src/pages/components/control-components/clerk-loading.mdx
@@ -4,7 +4,7 @@ The `<ClerkLoading>` renders its children while Clerk is loading, and is helpful
 
 ## Usage 
 
-```jsx copy filename='app.js'
+```jsx copy filename="app.js"
 import { useEffect } from "react";
 import { ClerkLoaded, ClerkLoading, ClerkProvider } from "@clerk/clerk-react";
 
