--- a/src/pages/components/control-components/multi-session.mdx
+++ b/src/pages/components/control-components/multi-session.mdx
@@ -6,7 +6,7 @@ The `<MultisessionAppSupport>` provides a wrapper for your React application tha
 
 ## Usage
 
-```jsx copy filename='app.js'
+```jsx copy filename="app.js"
 import { useEffect } from "react";
 import { ClerkProvider, MultisessionAppSupport } from "@clerk/clerk-react";
 
