--- a/src/pages/components/control-components/clerk-loaded.mdx
+++ b/src/pages/components/control-components/clerk-loaded.mdx
@@ -6,7 +6,7 @@ The `<ClerkLoaded>` component guarantees that the Clerk object has loaded and wi
 
 ## Usage
 
-```jsx copy filename='app.js'
+```jsx copy filename="app.js"
 import { useEffect } from "react";
 import { ClerkLoaded, ClerkProvider } from "@clerk/clerk-react";
 
