--- a/src/pages/components/ui-components/sign-in.mdx
+++ b/src/pages/components/ui-components/sign-in.mdx
@@ -4,21 +4,18 @@ import { Tables } from '@/components/Table'
 
 ## `<SignIn />`
 
-The `<SignIn/>` component renders a UI for signing in users.The functionality of the `<SignIn/>` component are controlled by the instance settings you specify in your Clerk Dashboard. You can further customize your `<SignIn/>` component by passing additional properties at the time of rendering.
-
-Here's an example of what the component looks like once it's rendered:
-
-![sign in component](https://clerk.dev/_next/image?url=https%3A%2F%2Fcdn.sanity.io%2Fimages%2Fe1ql88v4%2Fproduction%2Faa2aa7423978fb66e9791b526c6db2ff1fb8a778-960x1100.png%3Ffit%3Dmax%26auto%3Dformat&w=640&q=75)
+The `<SignIn/>` component renders a UI for signing in users. The functionality of the `<SignIn/>` component are controlled by the instance settings you specify in your [Clerk Dashboard](https://dashboard.clerk.dev). You can further customize your `<SignIn/>` component by passing additional properties at the time of rendering.
 
 ## Usage
 
-<Tabs items={['Next.js', 'React', "javascript"]}>
+Below is basic implementation of the `<SignIn/>` component. You can use this as a starting point for your own implementation
+
+<Tabs items={['Next.js', 'React', 'Remix', 'Gatsby', 'javascript']}>
 
 <Tab>
-Using the Next.js optional catch all route, you can embed the `<SignIn/>` component. This allows you to redirect the user inside your application and handle any redirects.
-
-```jsx filename="/pages/sign-in/[[...index]].[jsx/tsx]"
+```jsx copy filename="/pages/sign-in/[[...index]].[jsx/tsx]"
 import { SignIn } from "@clerk/nextjs";
+
 const SignInPage = () => (
   <SignIn path="/sign-in" routing="path" signUpUrl="/sign-up" />
 );
@@ -27,23 +24,20 @@ export default SignInPage;
 
 </Tab>
 <Tab>
-The mounted `<SignIn/>` component uses hash-based routing by default. As the sign in flow progresses, the hash portion of the URL will update to reflect the current step. An example of such a URL would be example.com/sign-in#/factor-one.
 
-```jsx filename="sign-in.jsx"
+```jsx copy filename="sign-in.jsx"
 import { SignIn } from "@clerk/clerk-react";
-// Render the sign in component in your
-// custom sign in page.
+
 function SignInPage() {
   return <SignIn />;
 }
 ```
-
-
 Below is an example that uses path-based routing to mount the `<SignIn/>` component under the "/sign-in" path. The Clerk React snippet uses the popular React Router library, but it can be easily adapted to use the routing library of your choice.
 
-```jsx filename="App.js"
+```jsx copy filename="App.js"
 import { ClerkProvider, SignedIn, SignIn } from "@clerk/clerk-react";
 import { BrowserRouter, Route, Routes, useNavigate } from "react-router-dom";
+
 function PublicPage() {
   return <h1>Public page</h1>;
 }
@@ -87,98 +81,65 @@ export default App;
 
 </Tab>
 <Tab>
-```js
-// Mount the sign in component inside the HTML element
-// with id "sign-in".
+```jsx copy filename="app/routes/sign-in/$.tsx"
+import { SignIn } from "@clerk/remix";
+
+export default function SignInPage() {
+  return (
+    <div style={{ border: "2px solid blue", padding: "2rem" }}>
+      <h1>Sign In route</h1>
+      <SignIn routing={"path"} path={"/sign-in"} />
+    </div>
+  );
+}
+```
+</Tab>
+<Tab>
+```jsx copy filename="/pages/sign-in.js"
+import { SignIn } from "gatsby-plugin-clerk";
+
+export default function SignInPage() {
+  return (
+    <div style={{ border: "2px solid blue", padding: "2rem" }}>
+      <h1>Sign In Up route</h1>
+      <SignIn routing={"path"} path={"/sign-in"} />
+    </div>
+  );
+}
+```
+</Tab>
+<Tab>
+```js copy filename="sign-in.js"
 window.Clerk.mountSignIn(
   document.getElementById("sign-in")
 );
-// Open the sign in component as a modal.
 window.Clerk.openSignIn();
 ````
 </Tab>
 </Tabs>
 
-## Override URLs
-
-<Tabs items={['Next.js', 'React', "javascript"]}>
-By default, the `<SignIn/>` component will use the Clerk Hosted Pages URL for sign ups. You can override this at runtime, by passing the signUpURL property to the component.
-
-Similarly, you can override the redirect URL after successful sign ins by providing the afterSignIn property to the component.
-
-Both URL property values can be either relative paths (like /home) or full URLs (like https://my-domain.com/home).
-
-<Tab>
-
-```jsx filename="/pages/sign-in/[[...index]].[jsx/tsx]"
-import { SignIn } from "@clerk/nextjs";
-const SignInPage = () => (
-  <SignIn
-    path="/sign-in"
-    routing="path"
-    signUpUrl="/sign-up"
-    afterSignInUrl={"url-you-choose"}
-  />
-);
-export default SignInPage;
-```
-
-</Tab>
-<Tab>
-
-```jsx filename="sign-in.js"
-import { SignIn } from "@clerk/clerk-react";
-// Root path points to your homepage and sign up URL
-// is the full URL to your sign up page. These can be
-// either relative paths or full URLs.
-import { rootPath, signUpURL } from "src/routes";
-// Render the sign in component in your custom sign in
-// page overriding the pre-configured URLs.
-function SignInPage() {
-  return <SignIn afterSignInUrl={rootPath} signUpUrl={signUpURL} />;
-}
-```
-
-</Tab>
-<Tab>
-```js
-    // Mount the sign in component inside the
-    // HTML element with id "sign-in".
-    window.Clerk.mountSignIn(
-      document.getElementById("sign-in"),
-      {
-        afterSignIn: "/home",
-        signUpURL: "/sign-up",
-      },
-    );
-    // Open the sign in component as a modal.
-    window.Clerk.openSignIn({
-    afterSignInUrl: "/home",
-    signUpUrl: "/sign-up",
-    });
-```
-</Tab>
-</Tabs>
 
 ## Props
 
-<Tables headings={["Name", "Type","Optional", "Description"]} rows={[
+All props below are optional.
+
+<Tables headings={["Name", "Type", "Description"]} rows={[
     {
-      cells: ["routing", "string", "✅", `The routing strategy for your pages. Supported values are: hash (default): Hash-based routing. path: Path-based routing. virtual: Virtual-based routing.`]
+      cells: ["routing", "string",  `The routing strategy for your pages. \nSupported values are: \n - hash (default): Hash-based routing. \n - path: Path-based routing. \n - virtual: Virtual-based routing.`]
     },
     {
-      cells: ["path", "string", "✅", "The path where the component is mounted on when path-based routing is used e.g. /sign-in. This prop is ignored in hash and virtual based routing."]
+      cells: ["path", "string",  "The path where the component is mounted on when path-based routing is used e.g. /sign-in."]
     },
     {
-      cells: ["redirectUrl", "string", "✅", "Full URL or path to navigate after successful sign in or sign up.The same as setting afterSignInUrl and afterSignUpUrl to the same value."]
+      cells: ["redirectUrl", "string",  "Full URL or path to navigate after successful sign in or sign up.\n The same as setting afterSignInUrl and afterSignUpUrl to the same value."]
     },
     {
-      cells: ["afterSignInUrl", "string", "✅ ", "The full URL or path to navigate after a successful sign in."]
+      cells: ["afterSignInUrl", "string",  "The full URL or path to navigate after a successful sign in."]
     },
      {
-      cells: ["signUpUrl", "string", "✅  ", "Full URL or path to the sign up page. Use this property to provide the target of the 'Sign Up' link that's rendered."]
+      cells: ["signUpUrl", "string",  "Full URL or path to the sign up page. Use this property to provide the target of the 'Sign Up' link that's rendered."]
     },
      {
-      cells: ["afterSignUpUrl", "string", "✅  ", "The full URL or path to navigate after a successful sign up."]
+      cells: ["afterSignUpUrl", "string", "The full URL or path to navigate after a successful sign up."]
     },
   ]} />
