Add image for testing

--- a/src/pages/components/ui-components/sign-in.mdx
+++ b/src/pages/components/ui-components/sign-in.mdx
@@ -6,6 +6,8 @@ import { Tables } from '@/components/Table'
 
 The `<SignIn/>` component renders a UI for signing in users. The functionality of the `<SignIn/>` component are controlled by the instance settings you specify in your [Clerk Dashboard](https://dashboard.clerk.dev). You can further customize your `<SignIn/>` component by passing additional properties at the time of rendering.
 
+![Sign In components](/images/ui-components/component-sign_in.svg)
+
 ## Usage
 
 Below is basic implementation of the `<SignIn/>` component. You can use this as a starting point for your own implementation
@@ -118,6 +120,7 @@ window.Clerk.openSignIn();
 </Tab>
 </Tabs>
 
+![Sign In component](public/images/ui-components/component-sign_in.svg)
 
 ## Props
 
