Feature and Chore
- Next Image custom image component
- Update Signed In
- Update sign in and sign up

--- a/src/pages/components/control-components/signed-in.mdx
+++ b/src/pages/components/control-components/signed-in.mdx
@@ -5,13 +5,15 @@ The `<SignedIn/>` component offers authentication checks as a cross-cutting conc
 
 ## Usage
 
+
+
 ```jsx copy filename="pages/index.js"
 
 import { SignedIn, ClerkProvider } from "@clerk/clerk-react";
 
 function Page() {
   return (
-    <ClerkProvider publishableKey="clerk-pub-key">
+    <ClerkProvider publishableKey="pk_test_••••••••••••••••••••••••••••••••••">
       <section>
         <div>
           This content is always visible.
@@ -40,7 +42,7 @@ import {
 function App() {
   return (
     <Router>
-      <ClerkProvider publishableKey="clerk-pub-key">
+      <ClerkProvider publishableKey="pk_test_••••••••••••••••••••••••••••••••••">
         <Route path="/public">
           <div>This page is publicly accessible.</div>
         </Route>
