--- a/src/pages/components/ui-components/sign-in.mdx
+++ b/src/pages/components/ui-components/sign-in.mdx
@@ -1,11 +1,12 @@
 import { Tab, Tabs } from "nextra-theme-docs";
 import { Callout } from "nextra-theme-docs";
 import { Tables } from '@/components/Table'
+import {Images} from '@/components/Images'
 
-## `<SignIn />`
+# `<SignIn />`
+---
 
-
-![Sign In components](/images/ui-components/component-sign_in.svg)
+<Images width={496} height={564} src="/images/ui-components/component-sign_in.svg" alt="Sign in component example"/>
 
 The `<SignIn/>` component renders a UI for signing in users. The functionality of the `<SignIn/>` component are controlled by the instance settings you specify in your [Clerk Dashboard](https://dashboard.clerk.dev). You can further customize your `<SignIn/>` component by passing additional properties at the time of rendering.
 
