--- a/src/pages/components/ui-components/sign-up.mdx
+++ b/src/pages/components/ui-components/sign-up.mdx
@@ -1,8 +1,12 @@
 import { Tab, Tabs } from "nextra-theme-docs";
 import { Callout } from "nextra-theme-docs";
 import { Tables } from '@/components/Table'
+import {Images} from '@/components/Images'
 
-## `<SignUp />`
+# `<SignUp />`
+---
+
+<Images width={496} height={780} src="/images/ui-components/component-sign_up.svg" alt="Sign up component example"/>
 
 The `<SignUp/>` component renders a UI for signing up users. The functionality of the `<SignUp/>` component are controlled by the instance settings you specify in your [Clerk Dashboard](https://dashboard.clerk.dev). You can further customize your `<SignUp/>` component by passing additional properties at the time of rendering.
 
