Updating to TSX only.
Adding more details to the Next.js starter.

--- a/src/pages/components/control-components/authenticate-with-callback.mdx
+++ b/src/pages/components/control-components/authenticate-with-callback.mdx
@@ -7,41 +7,53 @@ The `<AuthenticateWithRedirectCallback/>` is used to complete a custom OAuth flo
 
 ## Usage
 
-```jsx copy filename="app.js"
-import React from "react";
+This example below is using the `react-router-dom` library. You can use any routing library you want. 
+
+```tsx copy filename="app.tsx"
 import {
   ClerkProvider,
   AuthenticateWithRedirectCallback,
-  UserButton,
   SignedOut,
   useSignIn,
+  SignedIn,
 } from "@clerk/clerk-react";
+
+import { Route, Routes } from "react-router-dom";
 
 function App() {
   return (
-    <BrowserRouter>
-      <ClerkProvider publishableKey="pk_test_••••••••••••••••••••••••••••••••••">
-        <Switch>
-          {/* Define a / route that displays the OAuth button */}
-          <Route path="/">
-            <SignedOut>
-              <SignInOAuthButtons />
-            </SignedOut>
-          </Route>
-         
-           {/* Define a /sso-callback route that handle the OAuth redirect flow */}
-          <Route path="/sso-callback">
-            {/* Simply render the component */}
-            <AuthenticateWithRedirectCallback />
-          </Route>
-        </Switch>
-      </ClerkProvider>
-    </BrowserRouter>
+    <ClerkProvider publishableKey="pk_test_••••••••••••••••••••••••••••••••••">
+      {/* Define a / route that displays the OAuth button */}
+      <Routes>
+        <Route path="/" element={<HomePages />} />
+
+        <Route
+          path="/sso-callback"
+          element={<AuthenticateWithRedirectCallback />}
+        />
+      </Routes>
+    </ClerkProvider>
+  );
+}
+
+function HomePages() {
+  return (
+    <>
+      <SignedOut>
+        <SignInOAuthButtons />
+      </SignedOut>
+      <SignedIn>
+        <div>Hello! You are Signed In!</div>
+      </SignedIn>
+    </>
   );
 }
 
 function SignInOAuthButtons() {
-  const { signIn } = useSignIn();
+  const { signIn, isLoaded } = useSignIn();
+  if (!isLoaded) {
+    return null;
+  }
   const signInWithGoogle = () =>
     signIn.authenticateWithRedirect({
       strategy: "oauth_google",
@@ -50,6 +62,9 @@ function SignInOAuthButtons() {
     });
   return <button onClick={signInWithGoogle}>Sign in with Google</button>;
 }
+
+export default App;
+
 ```
 ## Props
 
