--- a/src/pages/components/control-components/clerk-loaded.mdx
+++ b/src/pages/components/control-components/clerk-loaded.mdx
@@ -6,9 +6,15 @@ The `<ClerkLoaded>` component guarantees that the Clerk object has loaded and wi
 
 ## Usage
 
-```jsx copy filename="app.js"
+```jsx copy filename="app.tsx"
 import { useEffect } from "react";
 import { ClerkLoaded, ClerkProvider } from "@clerk/clerk-react";
+
+declare global {
+  interface Window {
+    Clerk: any;
+  }
+}
 
 function App() {
   return (
@@ -22,14 +28,15 @@ function App() {
 
 function Page() {
   useEffect(() => {
-    // No need to check if the 
-    // Clerk object exists.
+    // no need to check if window.Clerk exists
     document.title = "This page uses Clerk " + 
-      document.window.Clerk.version;
+      window.Clerk.version;
   }, []);
   
   return (
-    <div>The content</div>
+    <div>The content </div>
   );
 }
+
+export default App;
 ```
