--- a/src/pages/components/control-components/clerk-loading.mdx
+++ b/src/pages/components/control-components/clerk-loading.mdx
@@ -4,15 +4,14 @@ The `<ClerkLoading>` renders its children while Clerk is loading, and is helpful
 
 ## Usage 
 
-```jsx copy filename="app.js"
-import { useEffect } from "react";
+```jsx copy filename="app.tsx"
 import { ClerkLoaded, ClerkLoading, ClerkProvider } from "@clerk/clerk-react";
 
 function App() {
   return (
-    <ClerkProvider publishableKey="pk_test_••••••••••••••••••••••••••••••••••">
+    <ClerkProvider publishableKey="pk_test_.........................">
       <ClerkLoading>
-        <div>Clerk is loading...</div>
+        <div>Clerk is loading</div>
       </ClerkLoading>
       <ClerkLoaded>
         <Page/>
@@ -27,4 +26,6 @@ function Page() {
     <div>The content</div>
   );
 }
+
+export default App;
 ```
