--- a/src/pages/components/control-components/redirect-to-signin.mdx
+++ b/src/pages/components/control-components/redirect-to-signin.mdx
@@ -1,6 +1,5 @@
 import { Tab, Tabs } from "nextra-theme-docs";
 
-
 # `<RedirectToSignIn />`
 
 
@@ -10,8 +9,6 @@ The `<RedirectToSignIn/>` component will navigate to the sign in URL which has b
 ## Usage
 
 <Tabs items={['Next.js', 'React', 'Remix', 'Gatsby']}>
-<Tab>
-<Tabs items={['TypeScript', 'JavaScript']}>
 <Tab>
 ```tsx copy filename="pages/_app.tsx"
 import {
@@ -40,35 +37,7 @@ export default MyApp;
 ```
 </Tab>
 <Tab>
-```jsx copy filename="pages/_app.js"
-import {
-  ClerkProvider,
-  SignedIn,
-  SignedOut,
-  RedirectToSignIn,
-} from "@clerk/nextjs";
-
-
-function MyApp({ Component, pageProps }) {
-  return (
-    <ClerkProvider {...pageProps}>
-          <SignedIn>
-            <Component {...pageProps} />
-          </SignedIn>
-          <SignedOut>
-            <RedirectToSignIn />
-          </SignedOut>
-    </ClerkProvider>
-  );
-} 
-
-export default MyApp;
-```
-</Tab>
-</Tabs>
-</Tab>
-<Tab>
-```jsx copy filename="pages/privatepage.js"
+```tsx copy filename="pages/privatepage.tsx"
 import { 
   ClerkProvider,
   SignedIn,
