--- a/src/pages/components/control-components/signed-in.mdx
+++ b/src/pages/components/control-components/signed-in.mdx
@@ -4,10 +4,7 @@
 The `<SignedIn/>` component offers authentication checks as a cross-cutting concern.Any children components wrapped by a `<SignedIn/>` component will be rendered only if there's a User with an active Session signed in your application. 
 
 ## Usage
-
-
-
-```jsx copy filename="pages/index.js"
+```jsx copy filename="app.tsx"
 
 import { SignedIn, ClerkProvider } from "@clerk/clerk-react";
 
@@ -29,9 +26,14 @@ function Page() {
   );
 }
 ```
-```jsx copy filename="pages/app.js"
 
-import { BrowserRouter as Router, Route } from 'react-router-dom';
+### Usage with React Router
+
+Below is an example of how to use `<SignedIn/>` with React Router. The `<SignedIn/>` component can be used as a child of a `<Route/>` component to render content only to signed in users.
+
+```jsx copy filename="app.tsx"
+
+import { Routes, Route } from 'react-router-dom';
 import { 
   ClerkProvider,
   SignedIn, 
@@ -43,17 +45,20 @@ function App() {
   return (
     <Router>
       <ClerkProvider publishableKey="pk_test_••••••••••••••••••••••••••••••••••">
-        <Route path="/public">
-          <div>This page is publicly accessible.</div>
-        </Route>
-        <Route path="/private">
-          <SignedIn>
-            <div>
-              This content is accessible only to signed
-              in users.
-            </div>
-          </SignedIn>
-        </Route>
+        <Routes>
+        <Route
+          path="/"
+          element={<div>This page is publicly accessible.</div>}
+        />
+        <Route
+          path="/private"
+          element={
+            <SignedIn>
+              <div>This content is accessible only to signed in users.</div>
+            </SignedIn>
+          }
+        />
+      </Routes>
       </ClerkProvider>
     </Router>
   );
