--- a/src/pages/quickstarts/next/next.mdx
+++ b/src/pages/quickstarts/next/next.mdx
@@ -119,38 +119,38 @@ Clerk offers two ways to protect your Next.js application, you can use Next.js M
 Using Middleware is the most comprehensive way to implement page protection in your app. Below is an example of page protection using Middleware.
 
 ```tsx
-import { withClerkMiddleware, getAuth } from '@clerk/nextjs/server'
-import { NextResponse } from 'next/server'
-import type { NextRequest } from 'next/server'
+import { withClerkMiddleware, getAuth } from "@clerk/nextjs/server";
+import { NextResponse } from "next/server";
+import type { NextRequest } from "next/server";
 
 // Set the paths that don't require the user to be signed in
-const publicPaths = ['/', '/sign-in*', '/sign-up*']
+const publicPaths = ["/", "/sign-in*", "/sign-up*"];
 
 const isPublic = (path: string) => {
-return publicPaths.find(x =>
-path.match(new RegExp(`^${x}$`.replace('\*$', '($|/)')))
-)
-}
+  return publicPaths.find((x) =>
+    path.match(new RegExp(`^${x}$`.replace("*$", "($|/)")))
+  );
+};
 
 export default withClerkMiddleware((request: NextRequest) => {
   if (isPublic(request.nextUrl.pathname)) {
-    return NextResponse.next()
+    return NextResponse.next();
   }
   // if the user is not signed in redirect them to the sign in page.
-  const { userId } = getAuth(request)
+  const { userId } = getAuth(request);
 
-if (!userId) {
-// redirect the users to /pages/sign-in/[[...index]].ts
+  if (!userId) {
+    // redirect the users to /pages/sign-in/[[...index]].ts
 
-    const signInUrl = new URL('/sign-in', request.url)
-    signInUrl.searchParams.set('redirect_url', request.url)
-    return NextResponse.redirect(signInUrl)
+    const signInUrl = new URL("/sign-in", request.url);
+    signInUrl.searchParams.set("redirect_url", request.url);
+    return NextResponse.redirect(signInUrl);
+  }
+  return NextResponse.next();
+});
 
-}
-return NextResponse.next()
-})
+export const config = { matcher: "/((?!.*\\.).*)" };
 
-export const config = { matcher: '/((?!.*\\.).*)' }
 ```
 </Tab>
 <Tab>
