--- a/src/pages/quickstarts/next/next-beta.mdx
+++ b/src/pages/quickstarts/next/next-beta.mdx
@@ -290,7 +290,7 @@ export default async function handler(
 
 Current user loads the User object for the authenticated user from Clerk's backend API. This is helpful if you want to render information like their first and last name directly from the server.
 
-Under the hood, this calls fetch() so it is automatically deduped per request.
+Under the hood, this calls `fetch()` so it is automatically deduped per request.
 
 ```tsx copy filename="page.tsx"
 import { currentUser } from '@clerk/nextjs/app-beta';
@@ -304,9 +304,9 @@ export default async function Page() {
 
 #### `auth()`
 
-We have introduced a new auth() helper that returns the same Authentication Object as getAuth(req) in middleware, getServerSideProps, and API routes.
+We have introduced a new `auth()` helper that returns the same Authentication Object as `getAuth(req)` in middleware, getServerSideProps, and API routes.
 
-Since request data like headers() and cookies() is now available in the global scope for Next.js, you no longer need to explicitly pass a Request object to Clerk
+Since request data like `headers()` and `cookies()` is now available in the global scope for Next.js, you no longer need to explicitly pass a Request object to Clerk
 
 ```tsx copy filename="app/page.tsx"
 import { auth } from '@clerk/nextjs/app-beta';
