Add signed out,

--- a/src/pages/components/control-components/signed-out.mdx
+++ b/src/pages/components/control-components/signed-out.mdx
@@ -1,12 +1,11 @@
-# `<SignedIn>`
+# `<SignedOut>`
 
-## Overview
-The `<SignedIn/>` component offers authentication checks as a cross-cutting concern. Any children components wrapped by a `<SignedIn/>` component will be rendered only if there's a User with an active Session signed in your application. 
+The `<SignedOut/>` component offers authentication checks as a cross-cutting concern. Any child nodes wrapped by a `<SignedOut/>` component will be rendered only if there's no User signed in to your application.
 
 ## Usage
 ```jsx copy filename="app.tsx"
 
-import { SignedIn, ClerkProvider } from "@clerk/clerk-react";
+import { SignedOut, ClerkProvider } from "@clerk/clerk-react";
 
 function Page() {
   return (
@@ -15,12 +14,11 @@ function Page() {
         <div>
           This content is always visible.
         </div>
-        <SignedIn>
+        <SignedOut>
           <div>
-            This content is visible only to 
-            signed in users.
+            This content is visible only to signed out users.
           </div>
-        </SignedIn>
+        </SignedOut>
       </section>
     </ClerkProvider>
   );
@@ -29,14 +27,15 @@ function Page() {
 
 ### Usage with React Router
 
-Below is an example of how to use `<SignedIn/>` with React Router. The `<SignedIn/>` component can be used as a child of a `<Route/>` component to render content only to signed in users.
+Below is an example of how to use `<SignedOut/>` with React Router. The `<SignedOut/>` component can be used as a child of a `<Route/>` component to render content only to signed in users.
 
 ```jsx copy filename="app.tsx"
 
 import { Routes, Route } from 'react-router-dom';
 import { 
   ClerkProvider,
-  SignedIn, 
+  SignedOut, 
+  RedirectToSignIn 
 } from "@clerk/clerk-react";
 
 function App() {
@@ -48,11 +47,11 @@ function App() {
           element={<div>This page is publicly accessible.</div>}
         />
         <Route
-          path="/private"
+          path="/public"
           element={
-            <SignedIn>
-              <div>This content is accessible only to signed in users.</div>
-            </SignedIn>
+            <SignedOut>
+              <div>This content is accessible only to users that are signed out.</div>
+            </SignedOut>
           }
         />
       </Routes>
