--- a/src/pages/quickstarts/next/next-beta.mdx
+++ b/src/pages/quickstarts/next/next-beta.mdx
@@ -61,7 +61,7 @@ export default function RootLayout({ children }: { children: React.ReactNode }) 
 ```
 
 <Callout type="warning">
- The root layout is a server component, if you plan to use the <ClerkProvider> outisde the root layout it will need to be a server component as well.
+ The root layout is a server component, if you plan to use the `<ClerkProvider>` outisde the root layout it will need to be a server component as well.
  </Callout> 
 
 ## Embedding Clerk Components
