Add sign in with Meta Add Sign up button Update sign in button

--- a/src/pages/components/ui-components/sign-up-button.mdx
+++ b/src/pages/components/ui-components/sign-up-button.mdx
@@ -2,22 +2,22 @@ import { Tab, Tabs } from "nextra-theme-docs";
 import { Callout } from "nextra-theme-docs";
 import { Tables } from '@/components/Table'
 
-# `<SignInButton />`
+# `<SignUpButton />`
 
-`<SignInButton/>` is a button that links to the sign-in page or displays the sign-in modal.
+`<SignUpButton/>` is a button that links to the sign-up page or displays the sign-up modal.
 
 ## Usage
 
 <Tabs items={['Next.js', 'React', 'Remix', 'Gatsby']}>
 <Tab>
 ```jsx copy filename="pages/index.js"
-import { SignInButton } from "@clerk/nextjs";
+import { SignUpButton } from "@clerk/nextjs";
 
 export default function Home() {
   return (
     <div>
-    <h1> Sign in </h1>
-      <SignInButton />
+    <h1> Sign up </h1>
+      <SignUpButton />
     </div>
   );
 }
@@ -25,17 +25,17 @@ export default function Home() {
 You can also overide the default button with your own button and text.
 
 ``` jsx copy filename="pages/index.js"
-import { SignInButton } from "@clerk/nextjs";
+import { SignUpButton } from "@clerk/nextjs";
 
 export default function Home() {
   return (
     <div>
-    <h1> Sign in </h1>
-      <SignInButton mode="modal">
+    <h1> Sign up </h1>
+      <SignUpButton mode="modal">
         <button className="btn">
-          Sign in
+          Sign up
         </button>
-      </SignInButton>
+      </SignUpButton>
     </div>
   );
 }
@@ -43,30 +43,30 @@ export default function Home() {
 </Tab>
 <Tab>
 ```jsx copy filename="example.js"
-import { SignInButton } from "@clerk/clerk-react";
+import { SignUpButton } from "@clerk/clerk-react";
 
 export default function Example() {
   return (
     <div>
-    <h1> Sign in </h1>
-      <SignInButton />
+    <h1> Sign up </h1>
+      <SignUpButton />
     </div>
   );
 }
 ```
 You can also overide the default button with your own button and text.
 ```jsx copy filename="example.js"
-import { SignInButton } from "@clerk/clerk-react";
+import { SignUpButton } from "@clerk/clerk-react";
 
 export default function Example() {
   return (
     <div>
-    <h1> Sign in </h1>
-      <SignInButton mode="modal">
+    <h1> Sign up </h1>
+      <SignUpButton mode="modal">
         <button className="btn">
-          Sign in
+          Sign up
         </button>
-      </SignInButton>
+      </SignUpButton>
     </div>
   );
 }
@@ -74,30 +74,30 @@ export default function Example() {
 </Tab>
 <Tab>
 ```jsx copy filename="pages/index.js"
-import { SignInButton } from "@clerk/remix";
+import { SignUpButton } from "@clerk/remix";
 
 export default function Home() {
   return (
     <div>
-    <h1> Sign in </h1>
-      <SignInButton />
+    <h1> Sign up </h1>
+      <SignUpButton />
     </div>
   );
 }
 ```
 You can also overide the default button with your own button and text.
 ```jsx copy filename="pages/index.js"
-import { SignInButton } from "@clerk/remix";
+import { SignUpButton } from "@clerk/remix";
 
 export default function Home() {
   return (
     <div>
-    <h1> Sign in </h1>
-      <SignInButton mode="modal">
+    <h1> Sign up </h1>
+      <SignUpButton mode="modal">
         <button className="btn">
-          Sign in
+          Sign up
         </button>
-      </SignInButton>
+      </SignUpButton>
     </div>
   );
 }
@@ -105,30 +105,30 @@ export default function Home() {
 </Tab>
 <Tab>
 ```jsx copy filename="pages/index.js"
-import { SignInButton } from "gatsby-plugin-clerk";
+import { SignUpButton } from "gatsby-plugin-clerk";
 
 export default function Home() {
   return (
     <div>
-    <h1> Sign in </h1>
-      <SignInButton />
+    <h1> Sign up </h1>
+      <SignUpButton />
     </div>
   );
 }
 ```
 You can also overide the default button with your own button and text.
 ```jsx copy filename="pages/index.js"
-import { SignInButton } from "gatsby-plugin-clerk";
+import { SignUpButton } from "gatsby-plugin-clerk";
 
 export default function Home() {
   return (
     <div>
-    <h1> Sign in </h1>
-      <SignInButton mode="modal">
+    <h1> Sign up </h1>
+      <SignUpButton mode="modal">
         <button className="btn">
-          Sign in
+          Sign up
         </button>
-      </SignInButton>
+      </SignUpButton>
     </div>
   );
 }
