--- a/src/pages/components/ui-components/sign-in-with-meta.mdx
+++ b/src/pages/components/ui-components/sign-in-with-meta.mdx
@@ -2,22 +2,22 @@ import { Tab, Tabs } from "nextra-theme-docs";
 import { Callout } from "nextra-theme-docs";
 import { Tables } from '@/components/Table'
 
-# `<SignInButton />`
+# `<SignInWithMetamaskButton />`
 
-`<SignInButton/>` is a button that links to the sign-in page or displays the sign-in modal.
+`<SignInWithMetamaskButton/>` is used to complete a one-click, cryptographically-secure login flow using MetaMask
 
 ## Usage
 
 <Tabs items={['Next.js', 'React', 'Remix', 'Gatsby']}>
 <Tab>
 ```jsx copy filename="pages/index.js"
-import { SignInButton } from "@clerk/nextjs";
+import { SignInWithMetamaskButton } from "@clerk/nextjs";
 
 export default function Home() {
   return (
     <div>
     <h1> Sign in </h1>
-      <SignInButton />
+      <SignInWithMetamaskButton />
     </div>
   );
 }
@@ -25,17 +25,17 @@ export default function Home() {
 You can also overide the default button with your own button and text.
 
 ``` jsx copy filename="pages/index.js"
-import { SignInButton } from "@clerk/nextjs";
+import { SignInWithMetamaskButton } from "@clerk/nextjs";
 
 export default function Home() {
   return (
     <div>
     <h1> Sign in </h1>
-      <SignInButton mode="modal">
+      <SignInWithMetamaskButton mode="modal">
         <button className="btn">
           Sign in
         </button>
-      </SignInButton>
+      </SignInWithMetamaskButton>
     </div>
   );
 }
@@ -43,30 +43,30 @@ export default function Home() {
 </Tab>
 <Tab>
 ```jsx copy filename="example.js"
-import { SignInButton } from "@clerk/clerk-react";
+import { SignInWithMetamaskButton } from "@clerk/clerk-react";
 
 export default function Example() {
   return (
     <div>
     <h1> Sign in </h1>
-      <SignInButton />
+      <SignInWithMetamaskButton />
     </div>
   );
 }
 ```
 You can also overide the default button with your own button and text.
 ```jsx copy filename="example.js"
-import { SignInButton } from "@clerk/clerk-react";
+import { SignInWithMetamaskButton } from "@clerk/clerk-react";
 
 export default function Example() {
   return (
     <div>
     <h1> Sign in </h1>
-      <SignInButton mode="modal">
+      <SignInWithMetamaskButton mode="modal">
         <button className="btn">
           Sign in
         </button>
-      </SignInButton>
+      </SignInWithMetamaskButton>
     </div>
   );
 }
@@ -74,30 +74,30 @@ export default function Example() {
 </Tab>
 <Tab>
 ```jsx copy filename="pages/index.js"
-import { SignInButton } from "@clerk/remix";
+import { SignInWithMetamaskButton } from "@clerk/remix";
 
 export default function Home() {
   return (
     <div>
     <h1> Sign in </h1>
-      <SignInButton />
+      <SignInWithMetamaskButton />
     </div>
   );
 }
 ```
 You can also overide the default button with your own button and text.
 ```jsx copy filename="pages/index.js"
-import { SignInButton } from "@clerk/remix";
+import { SignInWithMetamaskButton } from "@clerk/remix";
 
 export default function Home() {
   return (
     <div>
     <h1> Sign in </h1>
-      <SignInButton mode="modal">
+      <SignInWithMetamaskButton mode="modal">
         <button className="btn">
           Sign in
         </button>
-      </SignInButton>
+      </SignInWithMetamaskButton>
     </div>
   );
 }
@@ -105,30 +105,30 @@ export default function Home() {
 </Tab>
 <Tab>
 ```jsx copy filename="pages/index.js"
-import { SignInButton } from "gatsby-plugin-clerk";
+import { SignInWithMetamaskButton } from "gatsby-plugin-clerk";
 
 export default function Home() {
   return (
     <div>
     <h1> Sign in </h1>
-      <SignInButton />
+      <SignInWithMetamaskButton />
     </div>
   );
 }
 ```
 You can also overide the default button with your own button and text.
 ```jsx copy filename="pages/index.js"
-import { SignInButton } from "gatsby-plugin-clerk";
+import { SignInWithMetamaskButton } from "gatsby-plugin-clerk";
 
 export default function Home() {
   return (
     <div>
     <h1> Sign in </h1>
-      <SignInButton mode="modal">
+      <SignInWithMetamaskButton mode="modal">
         <button className="btn">
           Sign in
         </button>
-      </SignInButton>
+      </SignInWithMetamaskButton>
     </div>
   );
 }
