feat: Edit and test clerk-loaded/loading next code

--- a/src/pages/components/control-components/clerk-loaded.mdx
+++ b/src/pages/components/control-components/clerk-loaded.mdx
@@ -1,14 +1,16 @@
 import { Callout } from "nextra-theme-docs";
 
 # `<ClerkLoaded>`
+
 ---
+
 The `<ClerkLoaded>` component guarantees that the Clerk object has loaded and will be available under `window.Clerk`, this allows you to wrap child components to access the Clerk object without the need to check it exists.
 
 ## Usage
 
 ```jsx copy filename="app.tsx"
-import { useEffect } from "react";
-import { ClerkLoaded, ClerkProvider } from "@clerk/clerk-react";
+import React, { useEffect } from 'react';
+import { ClerkLoaded, ClerkProvider } from '@clerk/nextjs';
 
 declare global {
   interface Window {
@@ -18,7 +20,7 @@ declare global {
 
 function App() {
   return (
-    <ClerkProvider publishableKey="pk_test_••••••••••••••••••••••••••••••••••">
+    <ClerkProvider>
       <ClerkLoaded>
         <Page />
       </ClerkLoaded>
@@ -29,13 +31,10 @@ function App() {
 function Page() {
   useEffect(() => {
     // no need to check if window.Clerk exists
-    document.title = "This page uses Clerk " + 
-      window.Clerk.version;
+    document.title = 'This page uses Clerk ' + window.Clerk.version;
   }, []);
-  
-  return (
-    <div>The content </div>
-  );
+
+  return <div>The content </div>;
 }
 
 export default App;
