--- a/src/pages/components/control-components/clerk-loading.mdx
+++ b/src/pages/components/control-components/clerk-loading.mdx
@@ -1,31 +1,40 @@
 # `<ClerkLoading>`
+
 ---
+
 The `<ClerkLoading>` renders its children while Clerk is loading, and is helpful for showing a custom loading state.
 
-## Usage 
+## Usage
 
 ```jsx copy filename="app.tsx"
-import { ClerkLoaded, ClerkLoading, ClerkProvider } from "@clerk/clerk-react";
+import React, { useEffect } from 'react';
+import { MultisessionAppSupport, ClerkProvider } from '@clerk/nextjs';
+
+declare global {
+  interface Window {
+    Clerk: any;
+  }
+}
 
 function App() {
   return (
-    <ClerkProvider publishableKey="pk_test_.........................">
-      <ClerkLoading>
-        <div>Clerk is loading</div>
-      </ClerkLoading>
-      <ClerkLoaded>
-        <Page/>
-      </ClerkLoaded>
-      <div>This div is always visible</div>
+    <ClerkProvider>
+      <MultisessionAppSupport>
+        <Page />
+      </MultisessionAppSupport>
     </ClerkProvider>
   );
 }
 
 function Page() {
-  return (
-    <div>The content</div>
-  );
+  useEffect(() => {
+    // no need to check if window.Clerk exists
+    document.title = 'This page uses Clerk ' + window.Clerk.version;
+  }, []);
+
+  return <div>The content </div>;
 }
 
 export default App;
+
 ```
