Fix: reformat org docs

--- a/src/pages/components/organization-components/create-organization.mdx
+++ b/src/pages/components/organization-components/create-organization.mdx
@@ -3,15 +3,15 @@ import { Tables } from "@/components/Table";
 
 # `<CreateOrganization />`
 
-## Overview
-
-The `<CreateOrganization/>` component is used to render an organization creation UI that allows users to create brand new organizations within you application.
+---
 
 ![Organization Switcher Example](https://clerk.dev/_next/image?url=https%3A%2F%2Fcdn.sanity.io%2Fimages%2Fe1ql88v4%2Fproduction%2F99d98eca0c788a208682138febeaab919b0fbd4b-992x568.svg%3Ffit%3Dmax%26auto%3Dformat&w=2048&q=75)
 
 ---
 
-## Embedding a `<CreateOrganization />` component
+The `<CreateOrganization/>` component is used to render an organization creation UI that allows users to create brand new organizations within you application.
+
+## Usage
 
 ```jsx copy filename="/pages/create-organization/[[...index].[jsx/tsx]"
 import { CreateOrganization } from "@clerk/nextjs";
@@ -51,11 +51,11 @@ export default function CreateOrganizationPage() {
       ],
     },
     {
-      cells: ["appearance", "object"],
+      cells: [
+        "appearance",
+        "object",
+        "Control the look and feel of the component.",
+      ],
     },
   ]}
 />
-
-## Custom Styling
-
-The `<CreateOrganization />` component can be highly customized through the [appearance prop](https://clerk.dev/docs/nextjs/appearance-prop) and can be styled using [CSS Modules](https://clerk.dev/docs/component-customization/using-css-modules), [Tailwind](https://clerk.dev/docs/component-customization/using-tailwind), [inline CSS objects](https://clerk.dev/docs/component-customization/using-inline-css), or [global CSS](https://clerk.dev/docs/component-customization/using-global-css).
