--- a/src/pages/components/organization-components/organization-switcher.mdx
+++ b/src/pages/components/organization-components/organization-switcher.mdx
@@ -3,15 +3,15 @@ import { Tables } from "@/components/Table";
 
 # `<OrganizationSwitcher />`
 
-## Overview
-
-The `<OrganizationSwitcher/>` component is used to enable the ability to switch between available organizations the user may be part of in your application.
+---
 
 ![](https://clerk.dev/_next/image?url=https%3A%2F%2Fcdn.sanity.io%2Fimages%2Fe1ql88v4%2Fproduction%2F99d98eca0c788a208682138febeaab919b0fbd4b-992x568.svg%3Ffit%3Dmax%26auto%3Dformat&w=2048&q=75)
 
 ---
 
-## Embedding a `<OrganizationSwitcher />` component
+The `<OrganizationSwitcher/>` component is used to enable the ability to switch between available organizations the user may be part of in your application.
+
+## Usage
 
 ```jsx copy filename="/pages/organization-switcher/[[...index].[jsx/tsx]"
 import { OrganizationSwitcher } from "@clerk/nextjs";
@@ -55,11 +55,11 @@ export default function OrganizationSwitcherPage() {
       ],
     },
     {
-      cells: ["appearance", "object"],
+      cells: [
+        "appearance",
+        "object",
+        "Control the look and feel of the component.",
+      ],
     },
   ]}
 />
-
-## Custom Styling
-
-The `<OrganizationSwitcher />` component can be highly customized through the [appearance prop](https://clerk.dev/docs/nextjs/appearance-prop) and can be styled using [CSS Modules](https://clerk.dev/docs/component-customization/using-css-modules), [Tailwind](https://clerk.dev/docs/component-customization/using-tailwind), [inline CSS objects](https://clerk.dev/docs/component-customization/using-inline-css), or [global CSS](https://clerk.dev/docs/component-customization/using-global-css).
