--- a/src/pages/components/organization-components/organization-profile.mdx
+++ b/src/pages/components/organization-components/organization-profile.mdx
@@ -3,15 +3,15 @@ import { Tables } from "@/components/Table";
 
 # `<OrganizationProfile />`
 
-## Overview
-
-The `<OrganizationProfile/>` component is used to render a beautiful, full-featured organization management UI that allows users to manage their organization profile and security settings.
+---
 
 ![](https://clerk.dev/_next/image?url=https%3A%2F%2Fcdn.sanity.io%2Fimages%2Fe1ql88v4%2Fproduction%2F1782c52ab0615d3a58271bef6173d1de650d8be3-992x568.svg%3Ffit%3Dmax%26auto%3Dformat&w=2048&q=75)
 
 ---
 
-## Embedding a `<OrganizationProfile />` component
+The `<OrganizationProfile/>` component is used to render a beautiful, full-featured organization management UI that allows users to manage their organization profile and security settings.
+
+## Usage
 
 ```jsx copy filename="/pages/organization-profile/[[...index].[jsx/tsx]"
 import { OrganizationProfile } from "@clerk/nextjs";
@@ -51,11 +51,11 @@ export default function OrganizationProfilePage() {
       ],
     },
     {
-      cells: ["appearance", "object"],
+      cells: [
+        "appearance",
+        "object",
+        "Control the look and feel of the component.",
+      ],
     },
   ]}
 />
-
-## Custom Styling
-
-The `<OrganizationProfile />` component can be highly customized through the [appearance prop](https://clerk.dev/docs/nextjs/appearance-prop) and can be styled using [CSS Modules](https://clerk.dev/docs/component-customization/using-css-modules), [Tailwind](https://clerk.dev/docs/component-customization/using-tailwind), [inline CSS objects](https://clerk.dev/docs/component-customization/using-inline-css), or [global CSS](https://clerk.dev/docs/component-customization/using-global-css).
