--- a/src/pages/components/ui-components/user-button.mdx
+++ b/src/pages/components/ui-components/user-button.mdx
@@ -3,13 +3,15 @@ import { Tables } from "@/components/Table";
 
 # `<UserButton />`
 
-## Overview
-
-The `<UserButton/>` component is used to render the familiar user button UI popularized by Google. Learn more about the `<UserButton/>` component, what it is, and how it is used by reading our [User Button component guide](https://clerk.dev/docs/users/user-button).
+---
 
 ![](https://clerk.dev/_next/image?url=https%3A%2F%2Fcdn.sanity.io%2Fimages%2Fe1ql88v4%2Fproduction%2Ff45d86fae42cd6d564cddaa82cbf08127419f361-471x526.svg%3Ffit%3Dmax%26auto%3Dformat&w=1080&q=75)
 
-## Embedding a `<UserButton />` component
+---
+
+The `<UserButton/>` component is used to render the familiar user button UI popularized by Google. Learn more about the `<UserButton/>` component, what it is, and how it is used by reading our [User Button component guide](https://clerk.dev/docs/users/user-button).
+
+## Usage
 
 ```jsx copy filename="userButtonExample.[jsx/tsx]"
 import {
