--- a/src/pages/components/ui-components/user-profile.mdx
+++ b/src/pages/components/ui-components/user-profile.mdx
@@ -3,13 +3,15 @@ import { Tables } from "@/components/Table";
 
 # `<UserProfile />`
 
-## Overview
-
-The `<UserProfile/>` component is used to render a beautiful, full-featured account management UI that allows users to manage their profile and security settings. Learn more about the `<UserProfile/>` component, what it does, and how it is used by reading our [User Profile component guide](https://clerk.dev/docs/users/user-profile).
+---
 
 ![](https://clerk.dev/_next/image?url=https%3A%2F%2Fcdn.sanity.io%2Fimages%2Fe1ql88v4%2Fproduction%2Fb5c7d2c7fc2fae0dbdc8017ed5907f04dace90cd-528x645.svg%3Ffit%3Dmax%26auto%3Dformat&w=1080&q=75)
 
-## Embedding a `<UserProfile />` component
+---
+
+The `<UserProfile/>` component is used to render a beautiful, full-featured account management UI that allows users to manage their profile and security settings. Learn more about the `<UserProfile/>` component, what it does, and how it is used by reading our [User Profile component guide](https://clerk.dev/docs/users/user-profile).
+
+## Usage
 
 Using the [Next.js optional catch all route](https://nextjs.org/docs/routing/dynamic-routes#optional-catch-all-routes), you can embed the `<UserProfile/>` component. This allows you to redirect the user inside your application and handle any redirects.
 
