remove shared docs

--- a/src/pages/sdk/shared/use-user.mdx
+++ b/src/pages/sdk/shared/use-user.mdx
@@ -4,191 +4,44 @@ import { Tables } from "@/components/Table";
 
 # `useUser`
 
-The `useUser` hook returns the current user state: `{ isLoaded, isSignedIn, user }` . You can use the user object to access the currently active User. It can be used to update the user or display information about the user's profile, like their name or email address.
-
-While hooks are the recommended way to use the Clerk APIs, If you don't wish to use React hooks we also offer a couple of alternative methods to retrieve the currently signed in user.
+The `useUser` hook is used to get the current user object and to update the user's data on the client side.
 
 ## Usage
 
-<Callout>
-  Note that your component must be a descendent of `<ClerkProvider />`
-</Callout>
-
 <Tabs items={['Next.js']} defaultIndex="1" >
 <Tab>
-
 ```tsx copy filename="pages/index.tsx"
-import { ClerkProvider, useUser, SignIn, SignedOut } from "@clerk/nextjs";
+import { useUser } from "@clerk/nextjs";
 
-const Home = () => (
-  <ClerkProvider>
-    <Greeting />
-    <SignedOut>
-      <SignIn />
-    </SignedOut>
-  </ClerkProvider>
-);
+export default function Home() {
+  const { isSignedIn, user, isLoaded } = useUser();
 
-const Greeting = () => {
-  // Use the useUser hook to get the Clerk.user object
-  const { isLoaded, isSignedIn, user } = useUser();
+if (!isLoaded) {
+return null;
+}
 
-  if (!isLoaded || !isSignedIn) {
-    return null;
-  }
-  return <div>{user.firstName}</div>;
-};
+if (isSignedIn) {
+return <div>Hello {user.fullName}!</div>;
+}
 
-export default Home;
+return <div>Not signed in</div>;
+}
+
 ```
-
 </Tab>
 </Tabs>
 
-## Alternatives
 
-There are times where using a hook might be inconvenient. For such cases, there are alternative ways to get access to the [User](https://clerk.dev/docs/reference/clerkjs/user) object.
 
-Clerk provides the `<WithUser/>` component and the `withUser` Higher Order Component directive that will allow your wrapped components to get access to the currently signed in user.
-
-## withUser
-
-The `withUser` function offers a [Higher Order Component (HOC)](https://reactjs.org/docs/higher-order-components.html) that you can wrap your own components with, and they will have access to the active [User](https://clerk.dev/docs/reference/clerkjs/user) object.
-
-The `User` object will be accessible in the wrapped component under the `user` prop.
-
-<Callout>
-  Note that your component must be a descendent of `<ClerkProvider />`
-</Callout>
-
-<Tabs items={['Next.js']} defaultIndex="1" >
-<Tab>
-
-```tsx copy filename="pages/index.tsx"
-import { withUser } from "@clerk/nextjs";
-
-class Greeting extends React.Component {
-  render() {
-    return (
-      <div>
-        {this.props.user.firstName
-          ? `Hello ${this.props.user.firstName}!`
-          : "Hello there!"}
-      </div>
-    );
-  }
-}
-
-// Wrap your component with the withUser HOC.
-export const GreetingWithUser = withUser(Greeting);
+<Tables headings={["Variables", "Description"]} rows={[
+    {
+      cells: ["isSignedIn", "A boolean that returns true if the user is signed in."]
+    },
+    {
+      cells: ["isLoaded", "A boolean that until Clerk loads and initializes, will be set to false. Once Clerk loads, isLoaded will be set to true"]
+    },
+    {
+      cells: ["user", "An object containing the user's data. If the user is not signed in, user will be null."]
+    },
+  ]} />
 ```
-
-</Tab>
-</Tabs>
-
-## `<WithUser />`
-
-In cases where you cannot use the [withUser](https://clerk.dev/docs/reference/clerk-react/useuser#with-user) Higher Order Component, we provide a `<WithUser/>` component that accepts a [Function as a child](https://reactjs.org/docs/jsx-in-depth.html#functions-as-children). Inside this function, the active [User](https://clerk.dev/docs/reference/clerkjs/user) object will be accessible.
-
-<Tabs items={['Javascript', 'Typescript']} defaultIndex="1" >
-<Tab>
-
-```tsx copy
-import { WithUser } from "@clerk/nextjs";
-
-class Greeting extends React.Component {
-  render() {
-    return (
-      <WithUser>
-        {(user) => (
-          <div>
-            {user.firstName ? `Hello, ${user.firstName}!` : "Hello there!"}
-          </div>
-        )}
-      </WithUser>
-    );
-  }
-}
-```
-
-</Tab>
-
-<Tab>
-
-```tsx copy
-import { withUser, WithUserProp } from "@clerk/nextjs";
-
-type GreetingProps = {
-  greeting: string;
-}
-
-const Greeting = (props: WithUserProp<GreetingProps>) => {
-  const { user, greeting } = props;
-  return (
-    <h1>{ greeting }</h1>
-    <div>
-      { user.firstName
-        ? `Hello, ${user.firstName}!`
-        : "Hello there!" }
-    </div>
-  );
-}
-
-export const GreetingWithUser = withUser(Greeting);
-```
-
-</Tab>
-</Tabs>
-
-## Props
-
-<Tables
-  headings={["Name", "Type", "Description"]}
-  rows={[
-    {
-      cells: [
-        "userId",
-        "string",
-        `The ID of the active user, or null when signed out. In data-loaders, this is often the only piece of information needed to securely retrieve the data associated with a request.`,
-      ],
-    },
-    {
-      cells: [
-        "sessionId",
-        "string",
-        "The ID of the active session, or null when signed out. This is primarily used in audit logs to enable device-level granularity instead of user-level.",
-      ],
-    },
-    {
-      cells: [
-        "actor",
-        "string",
-        "If user impersonation is being used, this field will contain information about the impersonator.",
-      ],
-    },
-    {
-      cells: [
-        "getToken({ template?: string; })",
-        "string",
-        "Retrieves a signed JWT that is structured according to the corresponding JWT template in your dashboard. If no template parameter is provided, a default Clerk session JWT is returned.",
-      ],
-    },
-    {
-      cells: ["orgId", "string", "A unique identifier for this organization."],
-    },
-    {
-      cells: [
-        "orgRole",
-        "string",
-        "The role that the user will have in the organization. Valid values are `admin` and `basic_member`",
-      ],
-    },
-    {
-      cells: [
-        "claims",
-        "string",
-        `All claims for the JWT associated with the current user.`,
-      ],
-    },
-  ]}
-/>
