--- a/src/pages/components/ui-components/sign-in.mdx
+++ b/src/pages/components/ui-components/sign-in.mdx
@@ -10,7 +10,6 @@ import {Images} from '@/components/Images'
 
 The `<SignIn/>` component renders a UI for signing in users. The functionality of the `<SignIn/>` component are controlled by the instance settings you specify in your [Clerk Dashboard](https://dashboard.clerk.dev). You can further customize your `<SignIn/>` component by passing additional properties at the time of rendering.
 
-
 ## Usage
 
 Below is basic implementation of the `<SignIn/>` component. You can use this as a starting point for your own implementation
@@ -18,7 +17,7 @@ Below is basic implementation of the `<SignIn/>` component. You can use this as 
 <Tabs items={['Next.js', 'React', 'Remix', 'Gatsby', 'javascript']}>
 
 <Tab>
-```jsx copy filename="/pages/sign-in/[[...index]].[jsx/tsx]"
+```jsx copy filename="/pages/sign-in/[[...index]].tsx"
 import { SignIn } from "@clerk/nextjs";
 
 const SignInPage = () => (
