--- a/src/pages/components/control-components/clerk-loaded.mdx
+++ b/src/pages/components/control-components/clerk-loaded.mdx
@@ -1,16 +1,14 @@
 import { Callout } from "nextra-theme-docs";
 
 # `<ClerkLoaded>`
-
 ---
-
 The `<ClerkLoaded>` component guarantees that the Clerk object has loaded and will be available under `window.Clerk`, this allows you to wrap child components to access the Clerk object without the need to check it exists.
 
 ## Usage
 
 ```jsx copy filename="app.tsx"
-import React, { useEffect } from 'react';
-import { ClerkLoaded, ClerkProvider } from '@clerk/nextjs';
+import { useEffect } from "react";
+import { ClerkLoaded, ClerkProvider } from "@clerk/clerk-react";
 
 declare global {
   interface Window {
@@ -20,7 +18,7 @@ declare global {
 
 function App() {
   return (
-    <ClerkProvider>
+    <ClerkProvider publishableKey="pk_test_••••••••••••••••••••••••••••••••••">
       <ClerkLoaded>
         <Page />
       </ClerkLoaded>
@@ -31,10 +29,13 @@ function App() {
 function Page() {
   useEffect(() => {
     // no need to check if window.Clerk exists
-    document.title = 'This page uses Clerk ' + window.Clerk.version;
+    document.title = "This page uses Clerk " + 
+      window.Clerk.version;
   }, []);
-
-  return <div>The content </div>;
+  
+  return (
+    <div>The content </div>
+  );
 }
 
 export default App;
