--- a/src/pages/components/control-components/clerk-loading.mdx
+++ b/src/pages/components/control-components/clerk-loading.mdx
@@ -1,40 +1,31 @@
 # `<ClerkLoading>`
-
 ---
-
 The `<ClerkLoading>` renders its children while Clerk is loading, and is helpful for showing a custom loading state.
 
-## Usage
+## Usage 
 
 ```jsx copy filename="app.tsx"
-import React, { useEffect } from 'react';
-import { MultisessionAppSupport, ClerkProvider } from '@clerk/nextjs';
-
-declare global {
-  interface Window {
-    Clerk: any;
-  }
-}
+import { ClerkLoaded, ClerkLoading, ClerkProvider } from "@clerk/clerk-react";
 
 function App() {
   return (
-    <ClerkProvider>
-      <MultisessionAppSupport>
-        <Page />
-      </MultisessionAppSupport>
+    <ClerkProvider publishableKey="pk_test_.........................">
+      <ClerkLoading>
+        <div>Clerk is loading</div>
+      </ClerkLoading>
+      <ClerkLoaded>
+        <Page/>
+      </ClerkLoaded>
+      <div>This div is always visible</div>
     </ClerkProvider>
   );
 }
 
 function Page() {
-  useEffect(() => {
-    // no need to check if window.Clerk exists
-    document.title = 'This page uses Clerk ' + window.Clerk.version;
-  }, []);
-
-  return <div>The content </div>;
+  return (
+    <div>The content</div>
+  );
 }
 
 export default App;
-
 ```
