--- a/src/pages/components/ui-components/user-button.mdx
+++ b/src/pages/components/ui-components/user-button.mdx
@@ -1,19 +1,19 @@
 import { Tab, Tabs } from "nextra-theme-docs";
 import { Tables } from "@/components/Table";
+import {Images} from '@/components/Images'
 
 # `<UserButton />`
 
 ---
-
-![](https://clerk.dev/_next/image?url=https%3A%2F%2Fcdn.sanity.io%2Fimages%2Fe1ql88v4%2Fproduction%2Ff45d86fae42cd6d564cddaa82cbf08127419f361-471x526.svg%3Ffit%3Dmax%26auto%3Dformat&w=1080&q=75)
+<Images width={496} height={564} src="/images/ui-components/component-user_button.svg" alt="User Button Example"/>
 
 ---
 
-The `<UserButton/>` component is used to render the familiar user button UI popularized by Google. Learn more about the `<UserButton/>` component, what it is, and how it is used by reading our [User Button component guide](https://clerk.dev/docs/users/user-button).
+The `<UserButton/>` component is used to render the familiar user button UI popularized by Google.
 
 ## Usage
 
-```jsx copy filename="userButtonExample.[jsx/tsx]"
+```jsx copy filename="userButtonExample.tsx"
 import {
   ClerkProvider,
   SignedIn,
@@ -52,7 +52,7 @@ export default MyApp;
 ```
 
 ## Props
-
+All Props below are optional.
 <Tables
   headings={["Name", "Type", "Description"]}
   rows={[
@@ -117,23 +117,3 @@ export default MyApp;
     },
   ]}
 />
-
-## Custom Styling
-
-The `<UserButton />` component can be highly customized through the [appearance prop](https://clerk.dev/docs/nextjs/appearance-prop) and can be styled using [CSS Modules](https://clerk.dev/docs/component-customization/using-css-modules), [Tailwind](https://clerk.dev/docs/component-customization/using-tailwind), [inline CSS objects](https://clerk.dev/docs/component-customization/using-inline-css), or [global CSS](https://clerk.dev/docs/component-customization/using-global-css).
-
-## Customizing User Profile modal
-
-By leveraging the appearance prop above, it's possible to customize the appearance of the `<UserProfile/>` component that is presented by clicking the `<UserButton/>`. Below is a simple example of how that can be achieved:
-
-```js copy
-<UserButton
-  appearance={{
-    userProfile: { elements: { breadcrumbs: "bg-slate-500" } },
-  }}
-/>
-```
-
-## Localization
-
-The `<UserButton/>` component can be localized using the [localization prop](https://clerk.dev/docs/nextjs/localization). This allows you to customize the language used within the `<UserButton/> `component.
