--- a/src/pages/components/ui-components/user-profile.mdx
+++ b/src/pages/components/ui-components/user-profile.mdx
@@ -1,21 +1,22 @@
 import { Tab, Tabs } from "nextra-theme-docs";
 import { Tables } from "@/components/Table";
+import { Images } from "@/components/Images";
 
 # `<UserProfile />`
 
 ---
 
-![](https://clerk.dev/_next/image?url=https%3A%2F%2Fcdn.sanity.io%2Fimages%2Fe1ql88v4%2Fproduction%2Fb5c7d2c7fc2fae0dbdc8017ed5907f04dace90cd-528x645.svg%3Ffit%3Dmax%26auto%3Dformat&w=1080&q=75)
+<Images width={976} height={762} src="/images/ui-components/component-user_profile.svg" alt="UserProfile example"/>
 
 ---
 
-The `<UserProfile/>` component is used to render a beautiful, full-featured account management UI that allows users to manage their profile and security settings. Learn more about the `<UserProfile/>` component, what it does, and how it is used by reading our [User Profile component guide](https://clerk.dev/docs/users/user-profile).
+The `<UserProfile/>` component is used to render a beautiful, full-featured account management UI that allows users to manage their profile and security settings. 
 
 ## Usage
 
 Using the [Next.js optional catch all route](https://nextjs.org/docs/routing/dynamic-routes#optional-catch-all-routes), you can embed the `<UserProfile/>` component. This allows you to redirect the user inside your application and handle any redirects.
 
-```jsx copy filename="/pages/user-profile/[[...index].[jsx/tsx]"
+```jsx copy filename="/pages/user-profile/[[...index]].tsx"
 import { UserProfile } from "@clerk/nextjs";
 
 const UserProfilePage = () => (
@@ -69,11 +70,3 @@ The path where the component is mounted when path-based routing is used.
     },
   ]}
 />
-
-## Custom Styling
-
-The `<UserProfile />` component can be highly customized through the [appearance prop](https://clerk.dev/docs/nextjs/appearance-prop) and can be styled using [CSS Modules](https://clerk.dev/docs/component-customization/using-css-modules), [Tailwind](https://clerk.dev/docs/component-customization/using-tailwind), [inline CSS objects](https://clerk.dev/docs/component-customization/using-inline-css), or [global CSS](https://clerk.dev/docs/component-customization/using-global-css).
-
-## Localization
-
-The `<UserProfile />` component can be localized using the [localization prop](https://clerk.dev/docs/nextjs/localization). This allows you to customize the language used within the `<UserProfile /> `component.
