Add UserButton and UserProfile docs
* feat: Add UserButton and UserProfile docs

Co-authored-by: James Perkins <jamesperkins@hey.com>

--- a/src/pages/sdk/shared/use-user.mdx
+++ b/src/pages/sdk/shared/use-user.mdx
@@ -1,12 +1,12 @@
 import { Tab, Tabs } from "nextra-theme-docs";
 import { Callout } from "nextra-theme-docs";
-import { Tables } from '@/components/Table'
+import { Tables } from "@/components/Table";
 
 # `useUser`
 
 The `useUser` hook is used to get the current user object and to update the user's data on the client side.
 
-## Usage 
+## Usage
 
 <Tabs items={['Next.js']} defaultIndex="1" >
 <Tab>
@@ -16,15 +16,15 @@ import { useUser } from "@clerk/nextjs";
 export default function Home() {
   const { isSignedIn, user, isLoaded } = useUser();
 
-  if (!isLoaded) {
-    return null;
-  }
+if (!isLoaded) {
+return null;
+}
 
-  if (isSignedIn) {
-    return <div>Hello {user.fullName}!</div>;
-  }
+if (isSignedIn) {
+return <div>Hello {user.fullName}!</div>;
+}
 
-  return <div>Not signed in</div>;
+return <div>Not signed in</div>;
 }
 
 ```
@@ -44,3 +44,4 @@ export default function Home() {
       cells: ["user", "An object containing the user's data. If the user is not signed in, user will be null."]
     },
   ]} />
+```
