--- a/src/pages/components/organization-components/organization-profile.mdx
+++ b/src/pages/components/organization-components/organization-profile.mdx
@@ -1,19 +1,17 @@
 import { Tab, Tabs } from "nextra-theme-docs";
 import { Tables } from "@/components/Table";
+import {Images} from "@/components/Images";
 
 # `<OrganizationProfile />`
 
 ---
 
-![](https://clerk.dev/_next/image?url=https%3A%2F%2Fcdn.sanity.io%2Fimages%2Fe1ql88v4%2Fproduction%2F1782c52ab0615d3a58271bef6173d1de650d8be3-992x568.svg%3Ffit%3Dmax%26auto%3Dformat&w=2048&q=75)
-
----
-
+<Images alt="Organization Profile Example" width={1024} height={548} src="/images/ui-components/component-org_profile.svg"/>
 The `<OrganizationProfile/>` component is used to render a beautiful, full-featured organization management UI that allows users to manage their organization profile and security settings.
 
 ## Usage
 
-```jsx copy filename="/pages/organization-profile/[[...index].[jsx/tsx]"
+```jsx copy filename="/pages/organization-profile/[[...index]].tsx"
 import { OrganizationProfile } from "@clerk/nextjs";
 
 export default function OrganizationProfilePage() {
