--- a/src/pages/components/organization-components/organization-switcher.mdx
+++ b/src/pages/components/organization-components/organization-switcher.mdx
@@ -1,19 +1,17 @@
 import { Tab, Tabs } from "nextra-theme-docs";
 import { Tables } from "@/components/Table";
+import {Images} from "@/components/Images";
 
 # `<OrganizationSwitcher />`
 
 ---
 
-![](https://clerk.dev/_next/image?url=https%3A%2F%2Fcdn.sanity.io%2Fimages%2Fe1ql88v4%2Fproduction%2F99d98eca0c788a208682138febeaab919b0fbd4b-992x568.svg%3Ffit%3Dmax%26auto%3Dformat&w=2048&q=75)
-
----
-
+<Images alt="Organization Switcher Example" width={992} height={568} src="/images/ui-components/component-org_switcher.svg"/>
 The `<OrganizationSwitcher/>` component is used to enable the ability to switch between available organizations the user may be part of in your application.
 
 ## Usage
 
-```jsx copy filename="/pages/organization-switcher/[[...index].[jsx/tsx]"
+```jsx copy filename="/pages/organization-switcher/[[...index]].tsx"
 import { OrganizationSwitcher } from "@clerk/nextjs";
 
 export default function OrganizationSwitcherPage() {
